test/expected/explain_lc16.out
explain long char16_t x
             ^
14: error: "long char16_t" is illegal for built-in type
